<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jatin.dysassit.home.codelab.translate.ConvertText">

    <EditText
        android:id="@+id/pasteText"
        android:layout_width="409dp"
        android:layout_height="310dp"
        android:autofillHints=""
        android:hint="@string/pasteT"
        android:inputType="textMultiLine"
        android:textColor="#F44336"
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/boldbtn"
        android:layout_width="101dp"
        android:layout_height="62dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/bold"
        android:text="@string/Bold_btn"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/itbtn"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pasteText" />

    <Button
        android:id="@+id/itbtn"
        android:layout_width="109dp"
        android:layout_height="58dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="sans-serif-black"
        android:text="@string/Ittallic_btn"
        android:textColor="@color/design_default_color_error"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pasteText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/regbtn"
        android:layout_width="109dp"
        android:layout_height="58dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="12sp"
        android:text="@string/convert_btn"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/design_default_color_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/itbtn"
        app:layout_constraintTop_toBottomOf="@+id/pasteText" />

</androidx.constraintlayout.widget.ConstraintLayout>