<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/Animation.Design.BottomSheetDialog"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:background="@color/design_default_color_primary_dark"
            android:fontFamily="@font/regular"
            android:paddingBottom="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_background"
            android:textSize="30sp"
            android:textStyle="bold" />
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:layout_width="227dp"
                android:layout_height="200dp"

                android:contentDescription="@string/image_hai"
                app:srcCompat="@drawable/ic_letters" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view1"
            android:layout_width="480dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/speechtxt"
                android:layout_width="480dp"
                android:layout_height="100sp"
                android:text="@string/text_with_paragraphs"
                android:textSize="20sp"
                android:layout_gravity="top"
                android:fontFamily="@font/regular"/>

            <Button
                android:id="@+id/speechbtn"
                android:layout_width="226dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@color/design_default_color_primary_dark"
                android:fontFamily="@font/regular"
                android:lineSpacingExtra="12sp"
                android:text="@string/speech_to_text"
                android:textColor="@color/design_default_color_surface"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="480dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/imagetxt"
                android:layout_width="480dp"
                android:layout_height="100sp"
                android:text="@string/text_with_paragraphs"
                android:textSize="20sp"
                android:layout_gravity="top"
                android:fontFamily="@font/regular"/>

            <Button
                android:id="@+id/imagebtn"
                android:layout_width="226dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@color/design_default_color_primary_dark"
                android:fontFamily="@font/regular"
                android:text="@string/Imagetotxt"
                android:textColor="@color/design_default_color_background"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="480dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/converttxt"
                android:layout_width="480dp"
                android:layout_height="100sp"
                android:text="@string/text_with_paragraphs"
                android:textSize="20sp"
                android:layout_gravity="top"
                android:fontFamily="@font/regular"/>

            <Button
                android:id="@+id/convertbtn"
                android:layout_width="226dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@color/design_default_color_primary_dark"
                android:backgroundTint="@color/material_on_surface_stroke"
                android:backgroundTintMode="add"
                android:fontFamily="@font/regular"
                android:text="@string/converttxtbtn"
                android:textColor="@color/design_default_color_background"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Convert Text" />
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/card_view4"
            android:layout_width="480dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/spacertxt"
                android:layout_width="480dp"
                android:layout_height="100sp"
                android:text="@string/text_with_paragraphs"
                android:textSize="20sp"
                android:layout_gravity="top"
                android:fontFamily="@font/regular"/>

            <Button
                android:id="@+id/spacerbtn"
                android:layout_width="226dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@color/design_default_color_primary_dark"
                android:backgroundTint="@color/material_on_surface_stroke"
                android:backgroundTintMode="add"
                android:fontFamily="@font/bold"
                android:text="@string/spacertxtbtn"
                android:textColor="@color/design_default_color_background"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>